// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkoutLibrary renders correctly 1`] = `
[
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <RCTScrollView
      style={
        {
          "marginTop": "25%",
        }
      }
    >
      <View>
        <View
          style={
            [
              {
                "marginVertical": 8,
              },
              undefined,
            ]
          }
          theme={
            {
              "animation": {
                "scale": 1,
              },
              "colors": {
                "backdrop": "rgba(50, 47, 55, 0.4)",
                "background": "rgba(255, 251, 254, 1)",
                "elevation": {
                  "level0": "transparent",
                  "level1": "rgb(247, 243, 249)",
                  "level2": "rgb(243, 237, 246)",
                  "level3": "rgb(238, 232, 244)",
                  "level4": "rgb(236, 230, 243)",
                  "level5": "rgb(233, 227, 241)",
                },
                "error": "rgba(179, 38, 30, 1)",
                "errorContainer": "rgba(249, 222, 220, 1)",
                "inverseOnSurface": "rgba(244, 239, 244, 1)",
                "inversePrimary": "rgba(208, 188, 255, 1)",
                "inverseSurface": "rgba(49, 48, 51, 1)",
                "onBackground": "rgba(28, 27, 31, 1)",
                "onError": "rgba(255, 255, 255, 1)",
                "onErrorContainer": "rgba(65, 14, 11, 1)",
                "onPrimary": "rgba(255, 255, 255, 1)",
                "onPrimaryContainer": "rgba(33, 0, 93, 1)",
                "onSecondary": "rgba(255, 255, 255, 1)",
                "onSecondaryContainer": "rgba(29, 25, 43, 1)",
                "onSurface": "rgba(28, 27, 31, 1)",
                "onSurfaceDisabled": "rgba(28, 27, 31, 0.38)",
                "onSurfaceVariant": "rgba(73, 69, 79, 1)",
                "onTertiary": "rgba(255, 255, 255, 1)",
                "onTertiaryContainer": "rgba(49, 17, 29, 1)",
                "outline": "rgba(121, 116, 126, 1)",
                "outlineVariant": "rgba(202, 196, 208, 1)",
                "primary": "rgba(103, 80, 164, 1)",
                "primaryContainer": "rgba(234, 221, 255, 1)",
                "scrim": "rgba(0, 0, 0, 1)",
                "secondary": "rgba(98, 91, 113, 1)",
                "secondaryContainer": "rgba(232, 222, 248, 1)",
                "shadow": "rgba(0, 0, 0, 1)",
                "surface": "rgba(255, 251, 254, 1)",
                "surfaceDisabled": "rgba(28, 27, 31, 0.12)",
                "surfaceVariant": "rgba(231, 224, 236, 1)",
                "tertiary": "rgba(125, 82, 96, 1)",
                "tertiaryContainer": "rgba(255, 216, 228, 1)",
              },
              "dark": false,
              "fonts": {
                "bodyLarge": {
                  "fontFamily": "System",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0.15,
                  "lineHeight": 24,
                },
                "bodyMedium": {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "letterSpacing": 0.25,
                  "lineHeight": 20,
                },
                "bodySmall": {
                  "fontFamily": "System",
                  "fontSize": 12,
                  "fontWeight": "400",
                  "letterSpacing": 0.4,
                  "lineHeight": 16,
                },
                "default": {
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                },
                "displayLarge": {
                  "fontFamily": "System",
                  "fontSize": 57,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 64,
                },
                "displayMedium": {
                  "fontFamily": "System",
                  "fontSize": 45,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 52,
                },
                "displaySmall": {
                  "fontFamily": "System",
                  "fontSize": 36,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 44,
                },
                "headlineLarge": {
                  "fontFamily": "System",
                  "fontSize": 32,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 40,
                },
                "headlineMedium": {
                  "fontFamily": "System",
                  "fontSize": 28,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 36,
                },
                "headlineSmall": {
                  "fontFamily": "System",
                  "fontSize": 24,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 32,
                },
                "labelLarge": {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
                "labelMedium": {
                  "fontFamily": "System",
                  "fontSize": 12,
                  "fontWeight": "500",
                  "letterSpacing": 0.5,
                  "lineHeight": 16,
                },
                "labelSmall": {
                  "fontFamily": "System",
                  "fontSize": 11,
                  "fontWeight": "500",
                  "letterSpacing": 0.5,
                  "lineHeight": 16,
                },
                "titleLarge": {
                  "fontFamily": "System",
                  "fontSize": 22,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 28,
                },
                "titleMedium": {
                  "fontFamily": "System",
                  "fontSize": 16,
                  "fontWeight": "500",
                  "letterSpacing": 0.15,
                  "lineHeight": 24,
                },
                "titleSmall": {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
              },
              "isV3": true,
              "roundness": 4,
              "version": 3,
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "textAlign": "left",
                },
                {
                  "color": "rgba(28, 27, 31, 1)",
                  "writingDirection": "ltr",
                },
                [
                  {
                    "fontFamily": "System",
                    "fontSize": 14,
                    "fontWeight": "400",
                    "letterSpacing": 0.25,
                    "lineHeight": 20,
                  },
                  [
                    {
                      "paddingHorizontal": 16,
                      "paddingVertical": 13,
                    },
                    {
                      "color": "rgba(73, 69, 79, 1)",
                      "fontFamily": "System",
                      "fontSize": 14,
                      "fontWeight": "400",
                      "letterSpacing": 0.25,
                      "lineHeight": 20,
                    },
                    undefined,
                  ],
                ],
              ]
            }
          >
            Workouts
          </Text>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                false,
                [
                  {
                    "paddingRight": 24,
                    "paddingVertical": 8,
                  },
                  {
                    "marginHorizontal": 12,
                  },
                ],
              ]
            }
          >
            <View
              style={
                {
                  "flexDirection": "row",
                  "marginVertical": 6,
                  "width": "100%",
                }
              }
            >
              <View
                pointerEvents="box-none"
                style={
                  [
                    {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    undefined,
                  ]
                }
              >
                <Text />
              </View>
              <View
                style={
                  [
                    {
                      "paddingLeft": 16,
                    },
                    {
                      "flex": 1,
                      "justifyContent": "center",
                    },
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  selectable={false}
                  style={
                    [
                      {
                        "textAlign": "left",
                      },
                      {
                        "color": "rgba(28, 27, 31, 1)",
                        "fontFamily": "System",
                        "fontWeight": "400",
                        "letterSpacing": 0,
                      },
                      {
                        "writingDirection": "ltr",
                      },
                      [
                        {
                          "fontSize": 16,
                        },
                        {
                          "color": "rgba(28, 27, 31, 1)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Rowing (Machine)
                </Text>
                <Text
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  onTextLayout={[Function]}
                  selectable={false}
                  style={
                    [
                      {
                        "textAlign": "left",
                      },
                      {
                        "color": "rgba(28, 27, 31, 1)",
                        "fontFamily": "System",
                        "fontWeight": "400",
                        "letterSpacing": 0,
                      },
                      {
                        "writingDirection": "ltr",
                      },
                      [
                        {
                          "fontSize": 14,
                        },
                        {
                          "color": "rgba(73, 69, 79, 1)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Rowing machine for cardio.
                </Text>
              </View>
            </View>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                false,
                [
                  {
                    "paddingRight": 24,
                    "paddingVertical": 8,
                  },
                  {
                    "marginHorizontal": 12,
                  },
                ],
              ]
            }
          >
            <View
              style={
                {
                  "flexDirection": "row",
                  "marginVertical": 6,
                  "width": "100%",
                }
              }
            >
              <View
                pointerEvents="box-none"
                style={
                  [
                    {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    undefined,
                  ]
                }
              >
                <Text />
              </View>
              <View
                style={
                  [
                    {
                      "paddingLeft": 16,
                    },
                    {
                      "flex": 1,
                      "justifyContent": "center",
                    },
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  selectable={false}
                  style={
                    [
                      {
                        "textAlign": "left",
                      },
                      {
                        "color": "rgba(28, 27, 31, 1)",
                        "fontFamily": "System",
                        "fontWeight": "400",
                        "letterSpacing": 0,
                      },
                      {
                        "writingDirection": "ltr",
                      },
                      [
                        {
                          "fontSize": 16,
                        },
                        {
                          "color": "rgba(28, 27, 31, 1)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Legs
                </Text>
              </View>
            </View>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                false,
                [
                  {
                    "paddingRight": 24,
                    "paddingVertical": 8,
                  },
                  {
                    "marginHorizontal": 12,
                  },
                ],
              ]
            }
          >
            <View
              style={
                {
                  "flexDirection": "row",
                  "marginVertical": 6,
                  "width": "100%",
                }
              }
            >
              <View
                pointerEvents="box-none"
                style={
                  [
                    {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    undefined,
                  ]
                }
              >
                <Text />
              </View>
              <View
                style={
                  [
                    {
                      "paddingLeft": 16,
                    },
                    {
                      "flex": 1,
                      "justifyContent": "center",
                    },
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  selectable={false}
                  style={
                    [
                      {
                        "textAlign": "left",
                      },
                      {
                        "color": "rgba(28, 27, 31, 1)",
                        "fontFamily": "System",
                        "fontWeight": "400",
                        "letterSpacing": 0,
                      },
                      {
                        "writingDirection": "ltr",
                      },
                      [
                        {
                          "fontSize": 16,
                        },
                        {
                          "color": "rgba(28, 27, 31, 1)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Pull
                </Text>
                <Text
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  onTextLayout={[Function]}
                  selectable={false}
                  style={
                    [
                      {
                        "textAlign": "left",
                      },
                      {
                        "color": "rgba(28, 27, 31, 1)",
                        "fontFamily": "System",
                        "fontWeight": "400",
                        "letterSpacing": 0,
                      },
                      {
                        "writingDirection": "ltr",
                      },
                      [
                        {
                          "fontSize": 14,
                        },
                        {
                          "color": "rgba(73, 69, 79, 1)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  10 second break in-between sets
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>,
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />,
]
`;

exports[`WorkoutLibrary renders workout form when a workout is started 1`] = `
[
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <RCTScrollView
      style={
        {
          "marginTop": "25%",
        }
      }
    >
      <View>
        <View
          style={
            [
              {
                "marginVertical": 8,
              },
              undefined,
            ]
          }
          theme={
            {
              "animation": {
                "scale": 1,
              },
              "colors": {
                "backdrop": "rgba(50, 47, 55, 0.4)",
                "background": "rgba(255, 251, 254, 1)",
                "elevation": {
                  "level0": "transparent",
                  "level1": "rgb(247, 243, 249)",
                  "level2": "rgb(243, 237, 246)",
                  "level3": "rgb(238, 232, 244)",
                  "level4": "rgb(236, 230, 243)",
                  "level5": "rgb(233, 227, 241)",
                },
                "error": "rgba(179, 38, 30, 1)",
                "errorContainer": "rgba(249, 222, 220, 1)",
                "inverseOnSurface": "rgba(244, 239, 244, 1)",
                "inversePrimary": "rgba(208, 188, 255, 1)",
                "inverseSurface": "rgba(49, 48, 51, 1)",
                "onBackground": "rgba(28, 27, 31, 1)",
                "onError": "rgba(255, 255, 255, 1)",
                "onErrorContainer": "rgba(65, 14, 11, 1)",
                "onPrimary": "rgba(255, 255, 255, 1)",
                "onPrimaryContainer": "rgba(33, 0, 93, 1)",
                "onSecondary": "rgba(255, 255, 255, 1)",
                "onSecondaryContainer": "rgba(29, 25, 43, 1)",
                "onSurface": "rgba(28, 27, 31, 1)",
                "onSurfaceDisabled": "rgba(28, 27, 31, 0.38)",
                "onSurfaceVariant": "rgba(73, 69, 79, 1)",
                "onTertiary": "rgba(255, 255, 255, 1)",
                "onTertiaryContainer": "rgba(49, 17, 29, 1)",
                "outline": "rgba(121, 116, 126, 1)",
                "outlineVariant": "rgba(202, 196, 208, 1)",
                "primary": "rgba(103, 80, 164, 1)",
                "primaryContainer": "rgba(234, 221, 255, 1)",
                "scrim": "rgba(0, 0, 0, 1)",
                "secondary": "rgba(98, 91, 113, 1)",
                "secondaryContainer": "rgba(232, 222, 248, 1)",
                "shadow": "rgba(0, 0, 0, 1)",
                "surface": "rgba(255, 251, 254, 1)",
                "surfaceDisabled": "rgba(28, 27, 31, 0.12)",
                "surfaceVariant": "rgba(231, 224, 236, 1)",
                "tertiary": "rgba(125, 82, 96, 1)",
                "tertiaryContainer": "rgba(255, 216, 228, 1)",
              },
              "dark": false,
              "fonts": {
                "bodyLarge": {
                  "fontFamily": "System",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0.15,
                  "lineHeight": 24,
                },
                "bodyMedium": {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "letterSpacing": 0.25,
                  "lineHeight": 20,
                },
                "bodySmall": {
                  "fontFamily": "System",
                  "fontSize": 12,
                  "fontWeight": "400",
                  "letterSpacing": 0.4,
                  "lineHeight": 16,
                },
                "default": {
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                },
                "displayLarge": {
                  "fontFamily": "System",
                  "fontSize": 57,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 64,
                },
                "displayMedium": {
                  "fontFamily": "System",
                  "fontSize": 45,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 52,
                },
                "displaySmall": {
                  "fontFamily": "System",
                  "fontSize": 36,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 44,
                },
                "headlineLarge": {
                  "fontFamily": "System",
                  "fontSize": 32,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 40,
                },
                "headlineMedium": {
                  "fontFamily": "System",
                  "fontSize": 28,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 36,
                },
                "headlineSmall": {
                  "fontFamily": "System",
                  "fontSize": 24,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 32,
                },
                "labelLarge": {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
                "labelMedium": {
                  "fontFamily": "System",
                  "fontSize": 12,
                  "fontWeight": "500",
                  "letterSpacing": 0.5,
                  "lineHeight": 16,
                },
                "labelSmall": {
                  "fontFamily": "System",
                  "fontSize": 11,
                  "fontWeight": "500",
                  "letterSpacing": 0.5,
                  "lineHeight": 16,
                },
                "titleLarge": {
                  "fontFamily": "System",
                  "fontSize": 22,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 28,
                },
                "titleMedium": {
                  "fontFamily": "System",
                  "fontSize": 16,
                  "fontWeight": "500",
                  "letterSpacing": 0.15,
                  "lineHeight": 24,
                },
                "titleSmall": {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
              },
              "isV3": true,
              "roundness": 4,
              "version": 3,
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "textAlign": "left",
                },
                {
                  "color": "rgba(28, 27, 31, 1)",
                  "writingDirection": "ltr",
                },
                [
                  {
                    "fontFamily": "System",
                    "fontSize": 14,
                    "fontWeight": "400",
                    "letterSpacing": 0.25,
                    "lineHeight": 20,
                  },
                  [
                    {
                      "paddingHorizontal": 16,
                      "paddingVertical": 13,
                    },
                    {
                      "color": "rgba(73, 69, 79, 1)",
                      "fontFamily": "System",
                      "fontSize": 14,
                      "fontWeight": "400",
                      "letterSpacing": 0.25,
                      "lineHeight": 20,
                    },
                    undefined,
                  ],
                ],
              ]
            }
          >
            Workouts
          </Text>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                false,
                [
                  {
                    "paddingRight": 24,
                    "paddingVertical": 8,
                  },
                  {
                    "marginHorizontal": 12,
                  },
                ],
              ]
            }
          >
            <View
              style={
                {
                  "flexDirection": "row",
                  "marginVertical": 6,
                  "width": "100%",
                }
              }
            >
              <View
                pointerEvents="box-none"
                style={
                  [
                    {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  accessibilityElementsHidden={true}
                  allowFontScaling={false}
                  importantForAccessibility="no-hide-descendants"
                  pointerEvents="none"
                  selectable={false}
                  style={
                    [
                      {
                        "color": "rgba(28, 27, 31, 1)",
                        "fontSize": 24,
                      },
                      [
                        {
                          "lineHeight": 24,
                          "transform": [
                            {
                              "scaleX": 1,
                            },
                          ],
                        },
                        {
                          "backgroundColor": "transparent",
                        },
                      ],
                      {
                        "fontFamily": "material-community",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  󰘈
                </Text>
              </View>
              <View
                style={
                  [
                    {
                      "paddingLeft": 16,
                    },
                    {
                      "flex": 1,
                      "justifyContent": "center",
                    },
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  selectable={false}
                  style={
                    [
                      {
                        "textAlign": "left",
                      },
                      {
                        "color": "rgba(28, 27, 31, 1)",
                        "fontFamily": "System",
                        "fontWeight": "400",
                        "letterSpacing": 0,
                      },
                      {
                        "writingDirection": "ltr",
                      },
                      [
                        {
                          "fontSize": 16,
                        },
                        {
                          "color": "rgba(28, 27, 31, 1)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Rowing (Machine)
                </Text>
                <Text
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  onTextLayout={[Function]}
                  selectable={false}
                  style={
                    [
                      {
                        "textAlign": "left",
                      },
                      {
                        "color": "rgba(28, 27, 31, 1)",
                        "fontFamily": "System",
                        "fontWeight": "400",
                        "letterSpacing": 0,
                      },
                      {
                        "writingDirection": "ltr",
                      },
                      [
                        {
                          "fontSize": 14,
                        },
                        {
                          "color": "rgba(73, 69, 79, 1)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Rowing machine for cardio.
                </Text>
              </View>
            </View>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                false,
                [
                  {
                    "paddingRight": 24,
                    "paddingVertical": 8,
                  },
                  {
                    "marginHorizontal": 12,
                  },
                ],
              ]
            }
          >
            <View
              style={
                {
                  "flexDirection": "row",
                  "marginVertical": 6,
                  "width": "100%",
                }
              }
            >
              <View
                pointerEvents="box-none"
                style={
                  [
                    {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  accessibilityElementsHidden={true}
                  allowFontScaling={false}
                  importantForAccessibility="no-hide-descendants"
                  pointerEvents="none"
                  selectable={false}
                  style={
                    [
                      {
                        "color": "rgba(28, 27, 31, 1)",
                        "fontSize": 24,
                      },
                      [
                        {
                          "lineHeight": 24,
                          "transform": [
                            {
                              "scaleX": 1,
                            },
                          ],
                        },
                        {
                          "backgroundColor": "transparent",
                        },
                      ],
                      {
                        "fontFamily": "material-community",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  󱅝
                </Text>
              </View>
              <View
                style={
                  [
                    {
                      "paddingLeft": 16,
                    },
                    {
                      "flex": 1,
                      "justifyContent": "center",
                    },
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  selectable={false}
                  style={
                    [
                      {
                        "textAlign": "left",
                      },
                      {
                        "color": "rgba(28, 27, 31, 1)",
                        "fontFamily": "System",
                        "fontWeight": "400",
                        "letterSpacing": 0,
                      },
                      {
                        "writingDirection": "ltr",
                      },
                      [
                        {
                          "fontSize": 16,
                        },
                        {
                          "color": "rgba(28, 27, 31, 1)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Legs
                </Text>
              </View>
            </View>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                false,
                [
                  {
                    "paddingRight": 24,
                    "paddingVertical": 8,
                  },
                  {
                    "marginHorizontal": 12,
                  },
                ],
              ]
            }
          >
            <View
              style={
                {
                  "flexDirection": "row",
                  "marginVertical": 6,
                  "width": "100%",
                }
              }
            >
              <View
                pointerEvents="box-none"
                style={
                  [
                    {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  accessibilityElementsHidden={true}
                  allowFontScaling={false}
                  importantForAccessibility="no-hide-descendants"
                  pointerEvents="none"
                  selectable={false}
                  style={
                    [
                      {
                        "color": "rgba(28, 27, 31, 1)",
                        "fontSize": 24,
                      },
                      [
                        {
                          "lineHeight": 24,
                          "transform": [
                            {
                              "scaleX": 1,
                            },
                          ],
                        },
                        {
                          "backgroundColor": "transparent",
                        },
                      ],
                      {
                        "fontFamily": "material-community",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  󱅝
                </Text>
              </View>
              <View
                style={
                  [
                    {
                      "paddingLeft": 16,
                    },
                    {
                      "flex": 1,
                      "justifyContent": "center",
                    },
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  selectable={false}
                  style={
                    [
                      {
                        "textAlign": "left",
                      },
                      {
                        "color": "rgba(28, 27, 31, 1)",
                        "fontFamily": "System",
                        "fontWeight": "400",
                        "letterSpacing": 0,
                      },
                      {
                        "writingDirection": "ltr",
                      },
                      [
                        {
                          "fontSize": 16,
                        },
                        {
                          "color": "rgba(28, 27, 31, 1)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Pull
                </Text>
                <Text
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  onTextLayout={[Function]}
                  selectable={false}
                  style={
                    [
                      {
                        "textAlign": "left",
                      },
                      {
                        "color": "rgba(28, 27, 31, 1)",
                        "fontFamily": "System",
                        "fontWeight": "400",
                        "letterSpacing": 0,
                      },
                      {
                        "writingDirection": "ltr",
                      },
                      [
                        {
                          "fontSize": 14,
                        },
                        {
                          "color": "rgba(73, 69, 79, 1)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  10 second break in-between sets
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>,
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />,
]
`;

exports[`WorkoutLibrary renders workout preview when a workout is selected 1`] = `
[
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <RCTScrollView
      style={
        {
          "marginTop": "25%",
        }
      }
    >
      <View>
        <View
          style={
            [
              {
                "marginVertical": 8,
              },
              undefined,
            ]
          }
          theme={
            {
              "animation": {
                "scale": 1,
              },
              "colors": {
                "backdrop": "rgba(50, 47, 55, 0.4)",
                "background": "rgba(255, 251, 254, 1)",
                "elevation": {
                  "level0": "transparent",
                  "level1": "rgb(247, 243, 249)",
                  "level2": "rgb(243, 237, 246)",
                  "level3": "rgb(238, 232, 244)",
                  "level4": "rgb(236, 230, 243)",
                  "level5": "rgb(233, 227, 241)",
                },
                "error": "rgba(179, 38, 30, 1)",
                "errorContainer": "rgba(249, 222, 220, 1)",
                "inverseOnSurface": "rgba(244, 239, 244, 1)",
                "inversePrimary": "rgba(208, 188, 255, 1)",
                "inverseSurface": "rgba(49, 48, 51, 1)",
                "onBackground": "rgba(28, 27, 31, 1)",
                "onError": "rgba(255, 255, 255, 1)",
                "onErrorContainer": "rgba(65, 14, 11, 1)",
                "onPrimary": "rgba(255, 255, 255, 1)",
                "onPrimaryContainer": "rgba(33, 0, 93, 1)",
                "onSecondary": "rgba(255, 255, 255, 1)",
                "onSecondaryContainer": "rgba(29, 25, 43, 1)",
                "onSurface": "rgba(28, 27, 31, 1)",
                "onSurfaceDisabled": "rgba(28, 27, 31, 0.38)",
                "onSurfaceVariant": "rgba(73, 69, 79, 1)",
                "onTertiary": "rgba(255, 255, 255, 1)",
                "onTertiaryContainer": "rgba(49, 17, 29, 1)",
                "outline": "rgba(121, 116, 126, 1)",
                "outlineVariant": "rgba(202, 196, 208, 1)",
                "primary": "rgba(103, 80, 164, 1)",
                "primaryContainer": "rgba(234, 221, 255, 1)",
                "scrim": "rgba(0, 0, 0, 1)",
                "secondary": "rgba(98, 91, 113, 1)",
                "secondaryContainer": "rgba(232, 222, 248, 1)",
                "shadow": "rgba(0, 0, 0, 1)",
                "surface": "rgba(255, 251, 254, 1)",
                "surfaceDisabled": "rgba(28, 27, 31, 0.12)",
                "surfaceVariant": "rgba(231, 224, 236, 1)",
                "tertiary": "rgba(125, 82, 96, 1)",
                "tertiaryContainer": "rgba(255, 216, 228, 1)",
              },
              "dark": false,
              "fonts": {
                "bodyLarge": {
                  "fontFamily": "System",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0.15,
                  "lineHeight": 24,
                },
                "bodyMedium": {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "letterSpacing": 0.25,
                  "lineHeight": 20,
                },
                "bodySmall": {
                  "fontFamily": "System",
                  "fontSize": 12,
                  "fontWeight": "400",
                  "letterSpacing": 0.4,
                  "lineHeight": 16,
                },
                "default": {
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                },
                "displayLarge": {
                  "fontFamily": "System",
                  "fontSize": 57,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 64,
                },
                "displayMedium": {
                  "fontFamily": "System",
                  "fontSize": 45,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 52,
                },
                "displaySmall": {
                  "fontFamily": "System",
                  "fontSize": 36,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 44,
                },
                "headlineLarge": {
                  "fontFamily": "System",
                  "fontSize": 32,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 40,
                },
                "headlineMedium": {
                  "fontFamily": "System",
                  "fontSize": 28,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 36,
                },
                "headlineSmall": {
                  "fontFamily": "System",
                  "fontSize": 24,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 32,
                },
                "labelLarge": {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
                "labelMedium": {
                  "fontFamily": "System",
                  "fontSize": 12,
                  "fontWeight": "500",
                  "letterSpacing": 0.5,
                  "lineHeight": 16,
                },
                "labelSmall": {
                  "fontFamily": "System",
                  "fontSize": 11,
                  "fontWeight": "500",
                  "letterSpacing": 0.5,
                  "lineHeight": 16,
                },
                "titleLarge": {
                  "fontFamily": "System",
                  "fontSize": 22,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 28,
                },
                "titleMedium": {
                  "fontFamily": "System",
                  "fontSize": 16,
                  "fontWeight": "500",
                  "letterSpacing": 0.15,
                  "lineHeight": 24,
                },
                "titleSmall": {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
              },
              "isV3": true,
              "roundness": 4,
              "version": 3,
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "textAlign": "left",
                },
                {
                  "color": "rgba(28, 27, 31, 1)",
                  "writingDirection": "ltr",
                },
                [
                  {
                    "fontFamily": "System",
                    "fontSize": 14,
                    "fontWeight": "400",
                    "letterSpacing": 0.25,
                    "lineHeight": 20,
                  },
                  [
                    {
                      "paddingHorizontal": 16,
                      "paddingVertical": 13,
                    },
                    {
                      "color": "rgba(73, 69, 79, 1)",
                      "fontFamily": "System",
                      "fontSize": 14,
                      "fontWeight": "400",
                      "letterSpacing": 0.25,
                      "lineHeight": 20,
                    },
                    undefined,
                  ],
                ],
              ]
            }
          >
            Workouts
          </Text>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                false,
                [
                  {
                    "paddingRight": 24,
                    "paddingVertical": 8,
                  },
                  {
                    "marginHorizontal": 12,
                  },
                ],
              ]
            }
          >
            <View
              style={
                {
                  "flexDirection": "row",
                  "marginVertical": 6,
                  "width": "100%",
                }
              }
            >
              <View
                pointerEvents="box-none"
                style={
                  [
                    {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  accessibilityElementsHidden={true}
                  allowFontScaling={false}
                  importantForAccessibility="no-hide-descendants"
                  pointerEvents="none"
                  selectable={false}
                  style={
                    [
                      {
                        "color": "rgba(28, 27, 31, 1)",
                        "fontSize": 24,
                      },
                      [
                        {
                          "lineHeight": 24,
                          "transform": [
                            {
                              "scaleX": 1,
                            },
                          ],
                        },
                        {
                          "backgroundColor": "transparent",
                        },
                      ],
                      {
                        "fontFamily": "material-community",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  󰘈
                </Text>
              </View>
              <View
                style={
                  [
                    {
                      "paddingLeft": 16,
                    },
                    {
                      "flex": 1,
                      "justifyContent": "center",
                    },
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  selectable={false}
                  style={
                    [
                      {
                        "textAlign": "left",
                      },
                      {
                        "color": "rgba(28, 27, 31, 1)",
                        "fontFamily": "System",
                        "fontWeight": "400",
                        "letterSpacing": 0,
                      },
                      {
                        "writingDirection": "ltr",
                      },
                      [
                        {
                          "fontSize": 16,
                        },
                        {
                          "color": "rgba(28, 27, 31, 1)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Rowing (Machine)
                </Text>
                <Text
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  onTextLayout={[Function]}
                  selectable={false}
                  style={
                    [
                      {
                        "textAlign": "left",
                      },
                      {
                        "color": "rgba(28, 27, 31, 1)",
                        "fontFamily": "System",
                        "fontWeight": "400",
                        "letterSpacing": 0,
                      },
                      {
                        "writingDirection": "ltr",
                      },
                      [
                        {
                          "fontSize": 14,
                        },
                        {
                          "color": "rgba(73, 69, 79, 1)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Rowing machine for cardio.
                </Text>
              </View>
            </View>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                false,
                [
                  {
                    "paddingRight": 24,
                    "paddingVertical": 8,
                  },
                  {
                    "marginHorizontal": 12,
                  },
                ],
              ]
            }
          >
            <View
              style={
                {
                  "flexDirection": "row",
                  "marginVertical": 6,
                  "width": "100%",
                }
              }
            >
              <View
                pointerEvents="box-none"
                style={
                  [
                    {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  accessibilityElementsHidden={true}
                  allowFontScaling={false}
                  importantForAccessibility="no-hide-descendants"
                  pointerEvents="none"
                  selectable={false}
                  style={
                    [
                      {
                        "color": "rgba(28, 27, 31, 1)",
                        "fontSize": 24,
                      },
                      [
                        {
                          "lineHeight": 24,
                          "transform": [
                            {
                              "scaleX": 1,
                            },
                          ],
                        },
                        {
                          "backgroundColor": "transparent",
                        },
                      ],
                      {
                        "fontFamily": "material-community",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  󱅝
                </Text>
              </View>
              <View
                style={
                  [
                    {
                      "paddingLeft": 16,
                    },
                    {
                      "flex": 1,
                      "justifyContent": "center",
                    },
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  selectable={false}
                  style={
                    [
                      {
                        "textAlign": "left",
                      },
                      {
                        "color": "rgba(28, 27, 31, 1)",
                        "fontFamily": "System",
                        "fontWeight": "400",
                        "letterSpacing": 0,
                      },
                      {
                        "writingDirection": "ltr",
                      },
                      [
                        {
                          "fontSize": 16,
                        },
                        {
                          "color": "rgba(28, 27, 31, 1)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Legs
                </Text>
              </View>
            </View>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                false,
                [
                  {
                    "paddingRight": 24,
                    "paddingVertical": 8,
                  },
                  {
                    "marginHorizontal": 12,
                  },
                ],
              ]
            }
          >
            <View
              style={
                {
                  "flexDirection": "row",
                  "marginVertical": 6,
                  "width": "100%",
                }
              }
            >
              <View
                pointerEvents="box-none"
                style={
                  [
                    {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  accessibilityElementsHidden={true}
                  allowFontScaling={false}
                  importantForAccessibility="no-hide-descendants"
                  pointerEvents="none"
                  selectable={false}
                  style={
                    [
                      {
                        "color": "rgba(28, 27, 31, 1)",
                        "fontSize": 24,
                      },
                      [
                        {
                          "lineHeight": 24,
                          "transform": [
                            {
                              "scaleX": 1,
                            },
                          ],
                        },
                        {
                          "backgroundColor": "transparent",
                        },
                      ],
                      {
                        "fontFamily": "material-community",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  󱅝
                </Text>
              </View>
              <View
                style={
                  [
                    {
                      "paddingLeft": 16,
                    },
                    {
                      "flex": 1,
                      "justifyContent": "center",
                    },
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  selectable={false}
                  style={
                    [
                      {
                        "textAlign": "left",
                      },
                      {
                        "color": "rgba(28, 27, 31, 1)",
                        "fontFamily": "System",
                        "fontWeight": "400",
                        "letterSpacing": 0,
                      },
                      {
                        "writingDirection": "ltr",
                      },
                      [
                        {
                          "fontSize": 16,
                        },
                        {
                          "color": "rgba(28, 27, 31, 1)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Pull
                </Text>
                <Text
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  onTextLayout={[Function]}
                  selectable={false}
                  style={
                    [
                      {
                        "textAlign": "left",
                      },
                      {
                        "color": "rgba(28, 27, 31, 1)",
                        "fontFamily": "System",
                        "fontWeight": "400",
                        "letterSpacing": 0,
                      },
                      {
                        "writingDirection": "ltr",
                      },
                      [
                        {
                          "fontSize": 14,
                        },
                        {
                          "color": "rgba(73, 69, 79, 1)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  10 second break in-between sets
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>,
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      accessibilityLiveRegion="polite"
      accessibilityViewIsModal={true}
      collapsable={false}
      onAccessibilityEscape={[Function]}
      pointerEvents="auto"
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
      testID="modal"
    >
      <View
        accessibilityLabel="Close modal"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        importantForAccessibility="no"
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "rgba(50, 47, 55, 0.4)",
            "flex": 1,
            "opacity": 1,
          }
        }
        testID="modal-backdrop"
      />
      <View
        pointerEvents="box-none"
        style={
          [
            {
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "marginBottom": 0,
              "marginTop": 0,
            },
            undefined,
          ]
        }
        testID="modal-wrapper"
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "white",
              "opacity": 1,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.15,
              "shadowRadius": 3,
            }
          }
          testID="modal-surface-outer-layer"
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "white",
                "flex": undefined,
                "justifyContent": "center",
                "padding": 20,
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 0.3,
                "shadowRadius": 1,
              }
            }
            testID="modal-surface"
          >
            <View
              style={
                [
                  {
                    "marginVertical": 8,
                  },
                  undefined,
                ]
              }
              theme={
                {
                  "animation": {
                    "scale": 1,
                  },
                  "colors": {
                    "backdrop": "rgba(50, 47, 55, 0.4)",
                    "background": "rgba(255, 251, 254, 1)",
                    "elevation": {
                      "level0": "transparent",
                      "level1": "rgb(247, 243, 249)",
                      "level2": "rgb(243, 237, 246)",
                      "level3": "rgb(238, 232, 244)",
                      "level4": "rgb(236, 230, 243)",
                      "level5": "rgb(233, 227, 241)",
                    },
                    "error": "rgba(179, 38, 30, 1)",
                    "errorContainer": "rgba(249, 222, 220, 1)",
                    "inverseOnSurface": "rgba(244, 239, 244, 1)",
                    "inversePrimary": "rgba(208, 188, 255, 1)",
                    "inverseSurface": "rgba(49, 48, 51, 1)",
                    "onBackground": "rgba(28, 27, 31, 1)",
                    "onError": "rgba(255, 255, 255, 1)",
                    "onErrorContainer": "rgba(65, 14, 11, 1)",
                    "onPrimary": "rgba(255, 255, 255, 1)",
                    "onPrimaryContainer": "rgba(33, 0, 93, 1)",
                    "onSecondary": "rgba(255, 255, 255, 1)",
                    "onSecondaryContainer": "rgba(29, 25, 43, 1)",
                    "onSurface": "rgba(28, 27, 31, 1)",
                    "onSurfaceDisabled": "rgba(28, 27, 31, 0.38)",
                    "onSurfaceVariant": "rgba(73, 69, 79, 1)",
                    "onTertiary": "rgba(255, 255, 255, 1)",
                    "onTertiaryContainer": "rgba(49, 17, 29, 1)",
                    "outline": "rgba(121, 116, 126, 1)",
                    "outlineVariant": "rgba(202, 196, 208, 1)",
                    "primary": "rgba(103, 80, 164, 1)",
                    "primaryContainer": "rgba(234, 221, 255, 1)",
                    "scrim": "rgba(0, 0, 0, 1)",
                    "secondary": "rgba(98, 91, 113, 1)",
                    "secondaryContainer": "rgba(232, 222, 248, 1)",
                    "shadow": "rgba(0, 0, 0, 1)",
                    "surface": "rgba(255, 251, 254, 1)",
                    "surfaceDisabled": "rgba(28, 27, 31, 0.12)",
                    "surfaceVariant": "rgba(231, 224, 236, 1)",
                    "tertiary": "rgba(125, 82, 96, 1)",
                    "tertiaryContainer": "rgba(255, 216, 228, 1)",
                  },
                  "dark": false,
                  "fonts": {
                    "bodyLarge": {
                      "fontFamily": "System",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "letterSpacing": 0.15,
                      "lineHeight": 24,
                    },
                    "bodyMedium": {
                      "fontFamily": "System",
                      "fontSize": 14,
                      "fontWeight": "400",
                      "letterSpacing": 0.25,
                      "lineHeight": 20,
                    },
                    "bodySmall": {
                      "fontFamily": "System",
                      "fontSize": 12,
                      "fontWeight": "400",
                      "letterSpacing": 0.4,
                      "lineHeight": 16,
                    },
                    "default": {
                      "fontFamily": "System",
                      "fontWeight": "400",
                      "letterSpacing": 0,
                    },
                    "displayLarge": {
                      "fontFamily": "System",
                      "fontSize": 57,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 64,
                    },
                    "displayMedium": {
                      "fontFamily": "System",
                      "fontSize": 45,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 52,
                    },
                    "displaySmall": {
                      "fontFamily": "System",
                      "fontSize": 36,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 44,
                    },
                    "headlineLarge": {
                      "fontFamily": "System",
                      "fontSize": 32,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 40,
                    },
                    "headlineMedium": {
                      "fontFamily": "System",
                      "fontSize": 28,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 36,
                    },
                    "headlineSmall": {
                      "fontFamily": "System",
                      "fontSize": 24,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 32,
                    },
                    "labelLarge": {
                      "fontFamily": "System",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 0.1,
                      "lineHeight": 20,
                    },
                    "labelMedium": {
                      "fontFamily": "System",
                      "fontSize": 12,
                      "fontWeight": "500",
                      "letterSpacing": 0.5,
                      "lineHeight": 16,
                    },
                    "labelSmall": {
                      "fontFamily": "System",
                      "fontSize": 11,
                      "fontWeight": "500",
                      "letterSpacing": 0.5,
                      "lineHeight": 16,
                    },
                    "titleLarge": {
                      "fontFamily": "System",
                      "fontSize": 22,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 28,
                    },
                    "titleMedium": {
                      "fontFamily": "System",
                      "fontSize": 16,
                      "fontWeight": "500",
                      "letterSpacing": 0.15,
                      "lineHeight": 24,
                    },
                    "titleSmall": {
                      "fontFamily": "System",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 0.1,
                      "lineHeight": 20,
                    },
                  },
                  "isV3": true,
                  "roundness": 4,
                  "version": 3,
                }
              }
            >
              <Text
                numberOfLines={1}
                style={
                  [
                    {
                      "textAlign": "left",
                    },
                    {
                      "color": "rgba(28, 27, 31, 1)",
                      "writingDirection": "ltr",
                    },
                    [
                      {
                        "fontFamily": "System",
                        "fontSize": 14,
                        "fontWeight": "400",
                        "letterSpacing": 0.25,
                        "lineHeight": 20,
                      },
                      [
                        {
                          "paddingHorizontal": 16,
                          "paddingVertical": 13,
                        },
                        {
                          "color": "rgba(73, 69, 79, 1)",
                          "fontFamily": "System",
                          "fontSize": 14,
                          "fontWeight": "400",
                          "letterSpacing": 0.25,
                          "lineHeight": 20,
                        },
                        undefined,
                      ],
                    ],
                  ]
                }
              >
                Rowing (Machine)
              </Text>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": true,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    false,
                    [
                      {
                        "paddingRight": 24,
                        "paddingVertical": 8,
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flexDirection": "row",
                      "marginVertical": 6,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      [
                        {
                          "paddingLeft": 16,
                        },
                        {
                          "flex": 1,
                          "justifyContent": "center",
                        },
                      ]
                    }
                  >
                    <Text
                      numberOfLines={1}
                      selectable={false}
                      style={
                        [
                          {
                            "textAlign": "left",
                          },
                          {
                            "color": "rgba(28, 27, 31, 1)",
                            "fontFamily": "System",
                            "fontWeight": "400",
                            "letterSpacing": 0,
                          },
                          {
                            "writingDirection": "ltr",
                          },
                          [
                            {
                              "fontSize": 16,
                            },
                            {
                              "color": "rgba(28, 27, 31, 1)",
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      TODO
                    </Text>
                  </View>
                </View>
              </View>
            </View>
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "rgba(232, 222, 248, 1)",
                  "borderRadius": 20,
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                }
              }
              testID="button-container-outer-layer"
            >
              <View
                collapsable={false}
                style={
                  {
                    "backgroundColor": "rgba(232, 222, 248, 1)",
                    "borderColor": "transparent",
                    "borderRadius": 20,
                    "borderStyle": "solid",
                    "borderWidth": 0,
                    "flex": undefined,
                    "minWidth": 64,
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 0,
                      "width": 0,
                    },
                    "shadowOpacity": 0,
                    "shadowRadius": 0,
                  }
                }
                testID="button-container"
              >
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": false,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "overflow": "hidden",
                      },
                      {
                        "borderRadius": 20,
                      },
                    ]
                  }
                  testID="button"
                >
                  <View
                    style={
                      [
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "justifyContent": "center",
                        },
                        undefined,
                      ]
                    }
                  >
                    <Text
                      numberOfLines={1}
                      selectable={false}
                      style={
                        [
                          {
                            "textAlign": "left",
                          },
                          {
                            "color": "rgba(28, 27, 31, 1)",
                            "writingDirection": "ltr",
                          },
                          [
                            {
                              "fontFamily": "System",
                              "fontSize": 14,
                              "fontWeight": "500",
                              "letterSpacing": 0.1,
                              "lineHeight": 20,
                            },
                            [
                              {
                                "marginHorizontal": 16,
                                "marginVertical": 9,
                                "textAlign": "center",
                              },
                              false,
                              {
                                "marginHorizontal": 24,
                                "marginVertical": 10,
                              },
                              undefined,
                              false,
                              {
                                "color": "rgba(29, 25, 43, 1)",
                                "fontFamily": "System",
                                "fontSize": 14,
                                "fontWeight": "500",
                                "letterSpacing": 0.1,
                                "lineHeight": 20,
                              },
                              undefined,
                            ],
                          ],
                        ]
                      }
                      testID="button-text"
                    >
                      Start
                    </Text>
                  </View>
                </View>
              </View>
            </View>
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "rgba(232, 222, 248, 1)",
                  "borderRadius": 20,
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                }
              }
              testID="button-container-outer-layer"
            >
              <View
                collapsable={false}
                style={
                  {
                    "backgroundColor": "rgba(232, 222, 248, 1)",
                    "borderColor": "transparent",
                    "borderRadius": 20,
                    "borderStyle": "solid",
                    "borderWidth": 0,
                    "flex": undefined,
                    "minWidth": 64,
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 0,
                      "width": 0,
                    },
                    "shadowOpacity": 0,
                    "shadowRadius": 0,
                  }
                }
                testID="button-container"
              >
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": false,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "overflow": "hidden",
                      },
                      {
                        "borderRadius": 20,
                      },
                    ]
                  }
                  testID="button"
                >
                  <View
                    style={
                      [
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "justifyContent": "center",
                        },
                        undefined,
                      ]
                    }
                  >
                    <Text
                      numberOfLines={1}
                      selectable={false}
                      style={
                        [
                          {
                            "textAlign": "left",
                          },
                          {
                            "color": "rgba(28, 27, 31, 1)",
                            "writingDirection": "ltr",
                          },
                          [
                            {
                              "fontFamily": "System",
                              "fontSize": 14,
                              "fontWeight": "500",
                              "letterSpacing": 0.1,
                              "lineHeight": 20,
                            },
                            [
                              {
                                "marginHorizontal": 16,
                                "marginVertical": 9,
                                "textAlign": "center",
                              },
                              false,
                              {
                                "marginHorizontal": 24,
                                "marginVertical": 10,
                              },
                              undefined,
                              false,
                              {
                                "color": "rgba(29, 25, 43, 1)",
                                "fontFamily": "System",
                                "fontSize": 14,
                                "fontWeight": "500",
                                "letterSpacing": 0.1,
                                "lineHeight": 20,
                              },
                              undefined,
                            ],
                          ],
                        ]
                      }
                      testID="button-text"
                    >
                      Cancel
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>,
]
`;
